# TeamSpeak3-C-Query-API

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: _channel_8hpp_source.html  _client_8hpp_source.html  annotated.html  class_ts3_api_1_1_channel-members.html  class_ts3_api_1_1_channel.html  class_ts3_api_1_1_channel.js  class_ts3_api_1_1_client-members.html  class_ts3_api_1_1_client.html  class_ts3_api_1_1_group-members.html  class_ts3_api_1_1_group.html  class_ts3_api_1_1_group.js  class_ts3_api_1_1_permission-members.html  class_ts3_api_1_1_permission.html  class_ts3_api_1_1_permission.js  class_ts3_api_1_1_server-members.html  class_ts3_api_1_1_server.html  classes.html  dir_53507bf88ef5425748f9348c5ded7768.html  dir_54d77f48aecee2faf230fe9d00e6d3d2.html  dir_6ba49e6d9ef648a031df8948b500b516.html  dir_88b7c18ae8461958a1886dec33f9da31.html  files.html  files.js  functions.html  functions_0x7e.html  functions_8hpp_source.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_enum.html  functions_eval.html  functions_func.html  functions_g.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_p.html  (+1 more)
docs/html/: _channel_8hpp_source.html  _client_8hpp_source.html  _client_away_info_8hpp_source.html  _client_groups_8hpp_source.html  _client_times_info_8hpp_source.html  _client_voice_info_8hpp_source.html  _group_8hpp_source.html  _permission_8hpp_source.html  _server_8hpp_source.html  annotated.html  annotated_dup.js  class_ts3_api_1_1_channel-members.html  class_ts3_api_1_1_channel.html  class_ts3_api_1_1_channel.js  class_ts3_api_1_1_client-members.html  class_ts3_api_1_1_client.html  class_ts3_api_1_1_client.js  class_ts3_api_1_1_group-members.html  class_ts3_api_1_1_group.html  class_ts3_api_1_1_group.js  (+272 more)
examples/: connect_to_server.cpp  create_channel.cpp  create_group.cpp  rename_server_group.cpp  user_message.cpp
src/: Channel.cpp  Client.cpp  Group.cpp  Permission.cpp  Server.cpp  functions.cpp  main.cpp  serverStructs.cpp  ts3ObjectProperties.cpp
unitTests/: connection_test.cpp  split_tools_test.cpp
(+198 files in other folders)
